--- a/_config.yml
+++ b/_config.yml
@@ -107,8 +107,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "Khargooshe Naziloo"
-  avatar           : "/assets/images/bio-photo.jpg"
+  name             : "parnia fazeli"
+  avatar           : "/assets/images/"https://upload.wikimedia.org/wikipedia/en/thumb/3/3b/SpongeBob_SquarePants_character.svg/1200px-SpongeBob_SquarePants_character.svg.png
   bio              : I'm the best student.
   location         : "تهران"
   email            : sauleh@gmail.com
