--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "parnia fazeli"
-  avatar           : "/assets/images/"https://upload.wikimedia.org/wikipedia/en/thumb/3/3b/SpongeBob_SquarePants_character.svg/1200px-SpongeBob_SquarePants_character.svg.png
+  avatar           : "/assets/images/stickers-spongebob-patrick-star.jpg
   bio              : I'm the best student.
   location         : "تهران"
   email            : sauleh@gmail.com
