add photo of me

--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "parnia fazeli"
-  avatar           : "/assets/images/stickers-spongebob-patrick-star.jpg
+  avatar           : "/assets/images/stickers-spongebob-patrick-star.jpg.jpg"
   bio              : I'm the best student.
   location         : "تهران"
   email            : sauleh@gmail.com
