--- a/_config.yml
+++ b/_config.yml
@@ -111,12 +111,12 @@ author:
   avatar           : "/assets/images/stickers-spongebob-patrick-star.jpg.jpg"
   bio              : I'm the best student.
   location         : "تهران"
-  email            : sauleh@gmail.com
+  email            : parniafazeli2005@gmail.com
   twitter: sauleh_e
   linkedin: 
   google_scholar: Q25s5KkAAAAJ
   github: sauleh
-  instagram: saulehe
+  instagram: _parnia_f
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
