--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   bio              : I'm the best student.
   location         : "تهران"
   email            : parniafazeli2005@gmail.com
-  twitter: sauleh_e
+  twitter: 
   linkedin: 
   google_scholar: Q25s5KkAAAAJ
   github: sauleh
