--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ minimal_mistakes_skin    : "neon" #"default" # "air", "aqua", "contrast", "dark"
 
 # Site Settings
 locale                   : "en-US" 
-title                    : "پورنگ آتشی"
+title                    : "پرنیا فاضلی"
 title_separator          : "-"
-name                     : "Poorang" 
+name                     : "Parnia" 
 description              : "Welcome to my web site."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : #the subpath of your site, e.g. "/blog"
@@ -84,9 +84,9 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : sauleh_e
+  username:              parnia_f
 facebook:
-  username               : sauleh.eetemadi
+  username               : parniafazeli
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
@@ -115,7 +115,7 @@ author:
   twitter: 
   linkedin: 
   google_scholar: Q25s5KkAAAAJ
-  github: sauleh
+  github: parniafazeli
   instagram: _parnia_f
   links:
     - label: "Email"
