--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "parnia fazeli"
   avatar           : "/assets/images/stickers-spongebob-patrick-star.jpg.jpg"
-  bio              : I'm the best student.
+  bio              : this is my personal website.
   location         : "تهران"
   email            : parniafazeli2005@gmail.com
   twitter: 
